src/sample/Errors/C0080.st
// C0080: Function block '{name}' must be instantiated to be accessed
FUNCTION_BLOCK FB_C0080
    FB_C0080();
END_FUNCTION_BLOCK